--- a/markdowns/IDB_GTExv8_Analyses_Brain.Rmd
+++ b/markdowns/IDB_GTExv8_Analyses_Brain.Rmd
@@ -56,6 +56,18 @@ This section contains the major analyses performed so far using the junction dat
 
 Frontal Cortex was chosen as the reference tissue. In addition, each analysis provides with a summary table containing the results obtained for each Brain GTEx v8 tissue.
 
+### Contamination rates
+
+```{r contamination, echo = FALSE, results = "asis"}
+
+
+ # dont't forget the newline
+
+get_contamination_rates(all_tissues = F) %>% print()
+
+
+```
+
 ### Distances {.tabset .tabset-fade .tabset-pills}
 
 We first measured the distances lying between the unannotated splice site of each novel junction, named novel splice site (novelSS), and the annotated splice site of their attached reference intron, named reference splice site (refSS). 
@@ -78,7 +90,7 @@ These patterns are observed across all tissues in a consistent manner (see table
 
  # dont't forget the newline
 
-for (cluster in gtex_tissues[6]) { # tissue <- gtex_tissues[11]
+for (cluster in gtex_tissues[5]) { # tissue <- gtex_tissues[11]
   
   cat('\n') 
   cat("####", cluster, "\n")
@@ -128,7 +140,7 @@ Results showed that novel events occurring within exons are more frequently loca
 
 ```{r modulo, echo = FALSE, results = "asis"}
 
-for (tissue in gtex_tissues[6]) {
+for (tissue in gtex_tissues[5]) {
   
   cat('\n') 
   cat("####", tissue, "\n")
@@ -195,7 +207,7 @@ Second, it also showed that almost 80% of the novel junctions presented weaker s
 ```{r maxentscanscore, echo = FALSE, results = "asis"}
 
 
-for (tissue in gtex_tissues[6]) {
+for (tissue in gtex_tissues[5]) {
   
   cat('\n') 
   cat("####", tissue, "\n")
@@ -237,7 +249,7 @@ Results from this analysis show no significant differences in the level of inter
 ```{r conservation, echo = FALSE, results = "asis"}
 
 
-for (tissue in gtex_tissues[6]) {
+for (tissue in gtex_tissues[5]) {
   
   cat('\n') 
   cat("####", tissue, "\n")
@@ -268,7 +280,7 @@ Results from this analysis show no significant differences between the observed 
 ```{r CDTS, echo = FALSE, results = "asis"}
 
 
-for (tissue in gtex_tissues[6]) {
+for (tissue in gtex_tissues[5]) {
   
   cat('\n') 
   cat("####", tissue, "\n")
@@ -301,7 +313,7 @@ Finally, we tested whether mis-splicing was occurring more commonly at acceptor 
 
 ```{r missplicingratio, echo = FALSE, results = "asis"}
 
-for (tissue in gtex_tissues[6]) {
+for (tissue in gtex_tissues[5]) {
   
   cat('\n') 
   cat("####", tissue, "\n")
@@ -360,7 +372,7 @@ However, results from this analysis also show that the effect size produced by e
 ```{r lm, echo = FALSE, results = "asis"}
 
 
-for (tissue in gtex_tissues[6]) {
+for (tissue in gtex_tissues[5]) {
   
   cat('\n') 
   cat("####", tissue, "\n")
@@ -438,13 +450,14 @@ plot_estimate_variance(brain_tissues = T) %>% print()
 
 ### Gene Enrichment {.tabset .tabset-fade .tabset-pills}
 
-We then obtained the gene enrichment from the subset of genes corresponding to each intron category.
+GO Enrichment analyses of the genes from COMMON reference introns across all BRAIN tissues.
 
-Results from this analysis showed that all four unique subsets of genes did not present any relevant enrichment, **reinforcing the hypothesis that mis-splicing is not a product of a faulty genomic sequence. Instead, it might be due to an inadequate level of expression of the RBPs responsible for recognising the canonical splicing signals that are required for correct splicing.**
 
 #### Stats
 
-Each category of unique reference introns belong to a unique set of genes. In this sense, any overlapping gene across different intronic categories were discarded.
+Per each category of introns (i.e. both, donor, acceptor and never) we obtained the genes that were unique to each category.
+
+This means that any overlapping gene across different intron categories was discarded and not included in the following GO enrichment analyses.
 
 ```{r unique_genes, echo=F}
 
@@ -510,7 +523,9 @@ Each category of unique reference introns belong to a unique set of genes. In th
 
 GO Enrichment analysis (gprofiler2) performed only over the unique subset of genes from introns that were mis-spliced at 'both' splice sites.
 
-This analysis was performed using a custom background of genes formed by the full set of genes corresponding to all common introns across tissues included in this analysis. The inputed dataset of genes were not ordered and the p-values returned by the GO Enrichment analysis were corrected using the Bonferroni method.
+The background of genes used was formed by the ALL 21,518 genes from ALL common introns across BRAIN v8 tissues.
+
+The inputed dataset of genes were not ordered and the p-values returned by the GO Enrichment analysis were corrected using the Bonferroni method.
 
 ```{r GO_both, message=FALSE, echo=FALSE}
 
@@ -529,62 +544,63 @@ This analysis was performed using a custom background of genes formed by the ful
 
   if (!is.null(gene_enrichment_both$result)) {
     
-    # GO_enrichment <- gene_enrichment_both$result %>% 
-    #   filter(str_detect(source, pattern = "GO")) %>%
-    #   mutate(go_type = str_sub(source, start = 4, end = 5))
-    # 
-    # GO_enrich_reduc <- rutils::go_reduce(pathway_df = data.frame(go_type = GO_enrichment$go_type,
-    #                                                              go_id = GO_enrichment$term_id,
-    #                                                              go_term = GO_enrichment$term_name),
-    #                                      threshold = 0.7)
-    # 
-    # df_result <- merge(x = gene_enrichment$result %>% filter(source %in% c("GO:BP", "GO:MF", "GO:CC", "KEGG")),
-    #                    y = GO_enrich_reduc,
-    #                    by.x = "term_id",
-    #                    by.y = "go_id",
-    #                    all.x = T)
-    # 
-    # ## JOIN with KEGG results and add pvalues
-    # 
-    # rbind(df_result %>%
-    #         as_tibble() %>%
-    #         dplyr::select(parent_term, p_value, query_size, intersection_size, source) %>%
-    #         group_by(parent_term, source) %>%
-    #         mutate(p_value = p_value %>% max) %>%
-    #         ungroup() %>%
-    #         distinct(parent_term, .keep_all = T),
-    #       df_result %>% 
-    #         filter(source == "KEGG")%>%
-    #         dplyr::select(p_value, query_size, intersection_size, source, term_name) %>%
-    #         dplyr::rename(parent_term = term_name)) %>%
-    #   arrange(p_value) %>%
-    #   mutate(p_value = p_value %>% formatC(format = "e", digits = 2)) %>%
-    #   #filter(source == "KEGG") %>%
-    #   DT::datatable()
+    if(nrow(gene_enrichment_both$result) > 20) {
+      
+    GO_enrichment <- gene_enrichment_both$result %>% 
+     filter(str_detect(source, pattern = "GO")) %>%
+     mutate(go_type = str_sub(source, start = 4, end = 5))
+     
+    GO_enrich_reduc <- rutils::go_reduce(pathway_df = data.frame(go_type = GO_enrichment$go_type,
+                                                                 go_id = GO_enrichment$term_id,
+                                                                 go_term = GO_enrichment$term_name),
+                                         threshold = 0.7)
+     
+    df_result <- merge(x = gene_enrichment_both$result %>% filter(source %in% c("GO:BP", "GO:MF", "GO:CC", "KEGG")),
+                       y = GO_enrich_reduc,
+                       by.x = "term_id",
+                       by.y = "go_id",
+                       all.x = T)
 
-    gene_enrichment_both$result %>% 
-      select(p_value, term_name, source) %>%
-      dplyr::mutate(p_value = p_value %>% as.double()) %>%
-      #dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
+    ## JOIN with KEGG results and add pvalues
+
+    rbind(df_result %>%
+            as_tibble() %>%
+            dplyr::select(parent_term, p_value, query_size, intersection_size, source) %>%
+            group_by(parent_term, source) %>%
+            mutate(p_value = p_value %>% max) %>%
+            ungroup() %>%
+            distinct(parent_term, .keep_all = T),
+          df_result %>%
+            filter(source == "KEGG")%>%
+            dplyr::select(p_value, query_size, intersection_size, source, term_name) %>%
+            dplyr::rename(parent_term = term_name)) %>%
       arrange(p_value) %>%
-      dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
+      mutate(p_value = p_value %>% formatC(format = "e", digits = 2)) %>%
+      #filter(source == "KEGG") %>%
       DT::datatable() %>% 
       return()
-  } else {
+    } else {
+      gene_enrichment_both$result%>%
+        dplyr::select(term_name, p_value, query_size, intersection_size, source) %>%
+      DT::datatable() %>% 
+      return()
+    }
     
+  } else {
     DT::datatable(data = data.frame(result = "No results to show")) %>% 
       return()
   }
-  
   
 
 ```
 
 #### 'Donor' mis-spliced introns
 
-GO Enrichment analysis (gprofiler2) performed only over the unique genes from introns that can be mis-spliced at 'donor' splice sites across all brain tissues.
+GO Enrichment analysis (gprofiler2) performed only over the unique subset of genes from introns that were mis-spliced ONLY at the 'donor' splice sites.
 
-This analysis has been performed using a custom background of genes formed by all genes from the dataset of all common unique introns found across all brain regions. The inputed genes were not ordered and the p-values have been Bonferroni corrected.
+The background of genes used was formed by the ALL 21,518 genes from ALL common introns across BRAIN v8 tissues.
+
+The inputed dataset of genes were not ordered and the p-values returned by the GO Enrichment analysis were corrected using the Bonferroni method.
 
 ```{r GO_donor, message=FALSE, echo=F}
 
@@ -604,14 +620,47 @@ This analysis has been performed using a custom background of genes formed by al
 
   if (!is.null(gene_enrichment_donor$result)) {
     
-    gene_enrichment_donor$result %>% 
-      select(p_value, term_name,source) %>%
-      dplyr::mutate(p_value = p_value %>% as.double()) %>%
-      #dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
+    if(nrow(gene_enrichment_donor$result) > 20) {
+      
+    GO_enrichment <- gene_enrichment_donor$result %>% 
+     filter(str_detect(source, pattern = "GO")) %>%
+     mutate(go_type = str_sub(source, start = 4, end = 5))
+     
+    GO_enrich_reduc <- rutils::go_reduce(pathway_df = data.frame(go_type = GO_enrichment$go_type,
+                                                                 go_id = GO_enrichment$term_id,
+                                                                 go_term = GO_enrichment$term_name),
+                                         threshold = 0.7)
+     
+    df_result <- merge(x = gene_enrichment_donor$result %>% filter(source %in% c("GO:BP", "GO:MF", "GO:CC", "KEGG")),
+                       y = GO_enrich_reduc,
+                       by.x = "term_id",
+                       by.y = "go_id",
+                       all.x = T)
+
+    ## JOIN with KEGG results and add pvalues
+
+    rbind(df_result %>%
+            as_tibble() %>%
+            dplyr::select(parent_term, p_value, query_size, intersection_size, source) %>%
+            group_by(parent_term, source) %>%
+            mutate(p_value = p_value %>% max) %>%
+            ungroup() %>%
+            distinct(parent_term, .keep_all = T),
+          df_result %>%
+            filter(source == "KEGG")%>%
+            dplyr::select(p_value, query_size, intersection_size, source, term_name) %>%
+            dplyr::rename(parent_term = term_name)) %>%
       arrange(p_value) %>%
-      dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
+      mutate(p_value = p_value %>% formatC(format = "e", digits = 2)) %>%
+      #filter(source == "KEGG") %>%
       DT::datatable() %>% 
       return()
+    } else {
+      gene_enrichment_donor$result%>%
+        dplyr::select(term_name, p_value, query_size, intersection_size, source) %>%
+      DT::datatable() %>% 
+      return()
+    }
     
   } else {
     DT::datatable(data = data.frame(result = "No results to show")) %>% 
@@ -624,9 +673,11 @@ This analysis has been performed using a custom background of genes formed by al
 
 #### 'Acceptor' mis-spliced introns
 
-GO Enrichment analysis (gprofiler2) performed only over the unique genes from introns that can be mis-spliced at 'acceptor' splice sites across all brain tissues.
+GO Enrichment analysis (gprofiler2) performed only over the unique subset of genes from introns that were mis-spliced ONLY at 'acceptor' splice sites.
 
-This analysis has been performed using a custom background of genes formed by all genes from the dataset of all common unique introns found across all brain regions. The inputed genes were not ordered and the p-values have been Bonferroni corrected.
+The background of genes used was formed by the ALL 21,518 genes from ALL common introns across BRAIN v8 tissues.
+
+The inputed dataset of genes were not ordered and the p-values returned by the GO Enrichment analysis were corrected using the Bonferroni method.
 
 ```{r GO_acceptor, message=FALSE, echo=F}
 
@@ -644,17 +695,49 @@ This analysis has been performed using a custom background of genes formed by al
                                                correction_method = "bonferroni")
   if (!is.null(gene_enrichment_acceptor$result)) {
     
-    gene_enrichment_acceptor$result %>% 
-      select(p_value, term_name, source) %>%
-      dplyr::mutate(p_value = p_value %>% as.double()) %>%
-      #dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
+    if(nrow(gene_enrichment_acceptor$result) > 20) {
+      
+    GO_enrichment <- gene_enrichment_acceptor$result %>% 
+     filter(str_detect(source, pattern = "GO")) %>%
+     mutate(go_type = str_sub(source, start = 4, end = 5))
+     
+    GO_enrich_reduc <- rutils::go_reduce(pathway_df = data.frame(go_type = GO_enrichment$go_type,
+                                                                 go_id = GO_enrichment$term_id,
+                                                                 go_term = GO_enrichment$term_name),
+                                         threshold = 0.7)
+     
+    df_result <- merge(x = gene_enrichment_acceptor$result %>% filter(source %in% c("GO:BP", "GO:MF", "GO:CC", "KEGG")),
+                       y = GO_enrich_reduc,
+                       by.x = "term_id",
+                       by.y = "go_id",
+                       all.x = T)
+
+    ## JOIN with KEGG results and add pvalues
+
+    rbind(df_result %>%
+            as_tibble() %>%
+            dplyr::select(parent_term, p_value, query_size, intersection_size, source) %>%
+            group_by(parent_term, source) %>%
+            mutate(p_value = p_value %>% max) %>%
+            ungroup() %>%
+            distinct(parent_term, .keep_all = T),
+          df_result %>%
+            filter(source == "KEGG")%>%
+            dplyr::select(p_value, query_size, intersection_size, source, term_name) %>%
+            dplyr::rename(parent_term = term_name)) %>%
       arrange(p_value) %>%
-      dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
+      mutate(p_value = p_value %>% formatC(format = "e", digits = 2)) %>%
+      #filter(source == "KEGG") %>%
       DT::datatable() %>% 
       return()
+    } else {
+      gene_enrichment_acceptor$result%>%
+        dplyr::select(term_name, p_value, query_size, intersection_size, source) %>%
+      DT::datatable() %>% 
+      return()
+    }
     
-  }  else {
-    
+  } else {
     DT::datatable(data = data.frame(result = "No results to show")) %>% 
       return()
   }
@@ -665,9 +748,11 @@ This analysis has been performed using a custom background of genes formed by al
 
 #### Never mis-spliced introns
 
-GO Enrichment analysis (gprofiler2) performed only over the unique genes from introns that are never mis-spliced across brain tissues.
+GO Enrichment analysis (gprofiler2) performed only over the unique subset of genes from introns that were NEVER mis-spliced.
 
-This analysis has been performed using a custom background of genes formed by all genes from the dataset of all common unique introns found across all brain regions. The inputed genes were not ordered and the p-values have been Bonferroni corrected.
+The background of genes used was formed by the ALL 21,518 genes from ALL common introns across BRAIN v8 tissues.
+
+The inputed dataset of genes were not ordered and the p-values returned by the GO Enrichment analysis were corrected using the Bonferroni method.
 
 ```{r GO_never, message=FALSE, echo=F}
 
@@ -685,18 +770,50 @@ This analysis has been performed using a custom background of genes formed by al
   
   if (!is.null(gene_enrichment_never$result)) {
     
-    gene_enrichment_never$result %>% 
-      select(p_value, term_name) %>%
-      dplyr::mutate(p_value = p_value %>% as.double()) %>%
-      #dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
+    if(nrow(gene_enrichment_never$result) > 20) {
+      
+    GO_enrichment <- gene_enrichment_never$result %>% 
+     filter(str_detect(source, pattern = "GO")) %>%
+     mutate(go_type = str_sub(source, start = 4, end = 5))
+     
+    GO_enrich_reduc <- rutils::go_reduce(pathway_df = data.frame(go_type = GO_enrichment$go_type,
+                                                                 go_id = GO_enrichment$term_id,
+                                                                 go_term = GO_enrichment$term_name),
+                                         threshold = 0.7)
+     
+    df_result <- merge(x = gene_enrichment_never$result %>% filter(source %in% c("GO:BP", "GO:MF", "GO:CC", "KEGG")),
+                       y = GO_enrich_reduc,
+                       by.x = "term_id",
+                       by.y = "go_id",
+                       all.x = T)
+
+    ## JOIN with KEGG results and add pvalues
+
+    rbind(df_result %>%
+            as_tibble() %>%
+            dplyr::select(parent_term, p_value, query_size, intersection_size, source) %>%
+            group_by(parent_term, source) %>%
+            mutate(p_value = p_value %>% max) %>%
+            ungroup() %>%
+            distinct(parent_term, .keep_all = T),
+          df_result %>%
+            filter(source == "KEGG")%>%
+            dplyr::select(p_value, query_size, intersection_size, source, term_name) %>%
+            dplyr::rename(parent_term = term_name)) %>%
       arrange(p_value) %>%
-      dplyr::mutate_if(is.numeric, funs(as.character(signif(., 3)))) %>%
-      DT::datatable() %>%
+      mutate(p_value = p_value %>% formatC(format = "e", digits = 2)) %>%
+      #filter(source == "KEGG") %>%
+      DT::datatable() %>% 
       return()
+    } else {
+      gene_enrichment_never$result%>%
+        dplyr::select(term_name, p_value, query_size, intersection_size, source) %>%
+      DT::datatable() %>% 
+      return()
+    }
     
-  }  else {
-    
-   DT::datatable(data.frame(result = "No results to show")) %>%
+  } else {
+    DT::datatable(data = data.frame(result = "No results to show")) %>% 
       return()
   }
   
